Revision history for libcif

0.99.05 2012-08-XX
    - implemented cif-protocol perl bindings here

0.99.04 2012-07-31
    - bugfixes

0.99.01 2012-04-27
    - initial release
    - contains old CIF::Utils functions (generate_uuid, etc)