@@ -1,7 +1,7 @@
 package CIF::Msg::Feed;
 ##
 ## This file was generated by Google::ProtocolBuffers (0.08)
-## on Mon Aug 13 18:51:03 2012
+## on Wed Aug 15 13:06:49 2012
 ##      
 use strict;
 use warnings;
