@@ -2,6 +2,7 @@ Revision history for libcif
 
 0.99.05 2012-08-XX
     - implemented cif-protocol perl bindings here
+    - merged cif client libs here
 
 0.99.04 2012-07-31
     - bugfixes
